name:                dukface
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/vikrem/dukface#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
extra-source-files:
  README.md
  vendor/duktape/src/duktape.c
  vendor/duktape/src/duktape.h
  vendor/duktape/src/duk_config.h
  c-src/interrupt.c
  c-src/interrupt.h
tested-with:
  GHC == 8.2.2

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Test
  build-depends:       base >= 4.7 && < 5
                     , inline-c
                     , mtl
                     , transformers
                     , bytestring
                     , text
                     , safe-exceptions
                     , async
                     , aeson
                     , vector
                     , unordered-containers
                     , random
  default-language:    Haskell2010
  ghc-options: -Wall
  c-sources: vendor/duktape/src/duktape.c c-src/interrupt.c
  include-dirs: vendor/duktape/src c-src/
  includes: duktape.h interrupt.h
  install-includes: duktape.h interrupt.h
  cc-options: -Wall -Wno-ignored-qualifiers -std=c99 -fstrict-aliasing -fomit-frame-pointer -O2
  default-extensions: BangPatterns
                    , ConstraintKinds
                    , DataKinds
                    , DefaultSignatures
                    , DeriveFoldable
                    , DeriveFunctor
                    , DeriveGeneric
                    , DeriveLift
                    , DeriveTraversable
                    , DerivingStrategies
                    , EmptyCase
                    , ExistentialQuantification
                    , FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , InstanceSigs
                    , KindSignatures
                    , LambdaCase
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , NamedFieldPuns
                    , OverloadedStrings
                    , PatternSynonyms
                    , RankNTypes
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TupleSections
                    , TypeApplications
                    , TypeFamilies
                    , TypeFamilyDependencies
                    , TypeOperators
test-suite tests
    default-language: Haskell2010
    ghc-options: -threaded -O2 -Wall +RTS -N -RTS
    hs-source-dirs: tests
    main-is: Test.hs
    type: exitcode-stdio-1.0
    build-depends:
        base >= 4.3 && < 5
      , aeson
      , bytestring
      , hashable
      , scientific
      , smallcheck
      , mtl
      , tasty
      , tasty-hunit
      , tasty-smallcheck
      , text
      , unordered-containers
      , vector
      , dukface

source-repository head
  type:     git
  location: https://github.com/vikrem/dukface
