name:                dukface
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/vikrem/dukface#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
extra-source-files:
  README.md
  vendor/duktape/src/duktape.c
  vendor/duktape/src/duktape.h
  vendor/duktape/src/duk_config.h
  c-src/interrupt.c
  c-src/interrupt.h
  c-src/dukface.c
  c-src/dukface.h
tested-with:
  GHC == 8.2.2

library
  hs-source-dirs:      src
  exposed-modules:     Dukface
  build-depends:       base >= 4.7 && < 5
                     , inline-c
                     , mtl
                     , transformers
                     , bytestring
                     , text
                     , safe-exceptions
                     , async
                     , aeson
                     , vector
                     , unordered-containers
                     , random
  default-language:    Haskell2010
  ghc-options: -O2 -Wall
  c-sources: vendor/duktape/src/duktape.c c-src/interrupt.c c-src/dukface.c
  include-dirs: vendor/duktape/src c-src/
  includes: duktape.h interrupt.h dukface.h duk_config.h
  install-includes: duktape.h interrupt.h dukface.h duk_config.h
  cc-options: -O2 -Wno-deprecated-declarations -Wall
  default-extensions: BangPatterns
                    , ConstraintKinds
                    , DataKinds
                    , DefaultSignatures
                    , DeriveFoldable
                    , DeriveFunctor
                    , DeriveGeneric
                    , DeriveLift
                    , DeriveTraversable
                    , DerivingStrategies
                    , EmptyCase
                    , ExistentialQuantification
                    , FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , InstanceSigs
                    , KindSignatures
                    , LambdaCase
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , NamedFieldPuns
                    , OverloadedStrings
                    , PatternSynonyms
                    , RankNTypes
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TupleSections
                    , TypeApplications
                    , TypeFamilies
                    , TypeFamilyDependencies
                    , TypeOperators
test-suite tests
    default-language: Haskell2010
    ghc-options: -threaded -O2 -Wall -Wno-orphans
    hs-source-dirs: tests
    main-is: Test.hs
    type: exitcode-stdio-1.0
    build-depends:
        base >= 4.3 && < 5
      , aeson
      , async
      , bytestring
      , hashable
      , mtl
      , protolude
      , safe-exceptions
      , scientific
      , smallcheck
      , tasty
      , tasty-hunit
      , tasty-smallcheck
      , text
      , unordered-containers
      , vector
      , dukface

source-repository head
  type:     git
  location: https://github.com/vikrem/dukface
